21.sep (ws)
      - fix #11157: Omitting staves when creating score causes crash
      - fix #12651: Moving object, then undo causes crash
      - fix #12672: removing instrument causes crash
      - fix #12673: Removing treble stave from mutli-stave instrument causes crash
      - fix #12674: Removing bass stave from multi-stave instrument, then undo causes crash
20.sep (ws)
      - fix #12644: Bar and beat count on status bar doesn't update during playback
      - fix #12639: line dragged from palette are duplicated at the same
        position for linked part
      - fix #12638: Delete tie or slur in linked parts doesn't work
       (la)
      - fix #12648: Quitting, then cancelling to an unsaved score quits MuseScore
18.sep (lv)
      - fix MusicXML import of inverted fermata and marcato
      - fix vertical placement of SLines on MusicXML import
      - don't export system and page breaks when running the MusicXML autotest
        (make several testcases independent of precise layout)
      - updated MusicXML testfiles correspondingly
15.sep (ws)
      - fix #12012: Undo doesn't work after changing value of grace note
      - fix #11778: Stroke on multiple acciaccatura doesn't appear after save
      - fix #11779: Stroke of multiple acciaccatura immobile and incorrect
14.sep (ws)
      - fix #12547: Ottava line property menu missing
      - fix #12522: Mid-measure bar lines in qst stave list by saving and re-loading
      - new style parameter in editor: minimum measure width
      - incremented file version to 1.23: add length property to measure for
        irregular measures
      - fix #12520: Note heads don't highlight during playback
13.sep (ws)
      - new function: "Save Selected"
      - fix #12527: nudget time sig gets more and more displaced at each save and re-load
12.sep (lv)
      - fix #12437: R4754 MusicXML issues: keysig imports in first staff only
       (ws)
      - fix #12483: Score doesn't pan during playback
11.sep (lv)